dark mode bug fix

--- a/redesign/assets/styles/index.css
+++ b/redesign/assets/styles/index.css
@@ -99,7 +99,7 @@ footer {
 
 #left-footer a {
     font-size: 16px;
-    color: var(--light-color);
+    color: var(--dark-color);
 }
 
 #center-image {
